--- a/style/dailyStyle.css
+++ b/style/dailyStyle.css
@@ -28,82 +28,93 @@
     padding: 0;
     font-family: "medium", sans-serif;
 }
+html {
+    font-size: 16px;
+}
 body {
     width: 100dvw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 24px;
+    gap: 1.5rem;
+    overflow: auto;
 }
 main {
-    width: 100dvw;
+    width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
-    padding-left: 10dvw;
-    padding-right: 10dvw;
-    overflow: scroll;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    flex-grow: 1;
+    min-height: auto;
 }
 header {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 0.75rem;
 }
 .header-text-container {
     display: flex;
-    height: 60px;
-    min-width: 320px;
-    max-width: 1168px;
+    height: 3.75rem;
+    /* min-width: 320px;
+    max-width: 1168px; */
     align-items: center;
 }
 .header-text {
     font-family: "semibold", sans-serif;
+    font-size: 1.25rem;
 }
 .header-img {
-    height: 160px;
-    width: 100%;
+    width: 73rem;
+    height: 15rem;
     object-fit: cover;
-    width: 100%;
     border-radius: 24px;
 }
 article {
-    width: 80dvw;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    gap: 24px;
+    align-items: center;
+    gap: 1.5rem;
 }
 .article-header {
     display: flex;
     align-items: center;
-    gap: 16px;
-    flex: 1 0 0;
+    gap: 1rem;
+    width: 73rem;
     position: sticky;
-    top: 12px;
+    top: 20px;
     z-index: 20;
 }
 .article-header-text {
     color: rgba(171, 171, 171, 1);
 }
+.select-post {
+    width: 7.5rem;
+    height: 2rem;
+}
+.article-header-font {
+    font-size: 1rem;
+}
 .article-main {
-    width: 100%;
+    width: 73rem;
     display: flex;
     justify-content: space-between;
     position: relative;
 }
+
 .post {
-    width: 60%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 1.25rem;
 }
+
 .post-container {
-    width: 45%;
+    width: 47%;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 0.75rem;
     text-decoration: none;
     position: relative;
 }
@@ -115,7 +126,7 @@ article {
 }
 .post-img:hover {
     width: 110%;
-    height: 1;
+    height: 110%;
     filter: blur(4px);
 }
 .post-title {
@@ -159,8 +170,8 @@ article {
 }
 .post-delete {
     position: absolute;
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -172,38 +183,38 @@ article {
     border: 1px solid black;
     cursor: pointer;
 }
-
 .daily {
-    width: 30%;
-    max-height: 55dvh;
-    height: 460px;
-    padding: 24px;
+    width: 60rem;
+    height: 28.75rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
     border-radius: 16px;
     border: 1px solid #d4d3d3;
+    align-items: stretch;
 }
+
 .daily-header {
     font-family: "semibold", sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 .daily-checkcontainer {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 1rem;
     width: 100%;
 }
 .daily-inputlist {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    gap: 20px;
+    gap: 1.25rem;
 }
 .daily-input {
     display: flex;
-    gap: 8px;
-    font-size: 18px;
+    gap: 0.5rem;
+    font-size: 1.125rem;
 }
 .input-radio {
     accent-color: rgba(0, 0, 0, 1);
@@ -212,22 +223,22 @@ article {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
 }
 .daily-form-input {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 1.5rem;
 }
 .daily-title {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5rem;
 }
 .input-title {
-    padding: 12px 16px;
+    padding: 0.75rem 1rem;
     border-radius: 8px;
     border: 1px solid rgba(171, 171, 171, 1);
 }
@@ -235,11 +246,11 @@ article {
     color: #ababab;
 }
 .input-content {
-    height: 60px;
+    height: 3.75rem;
     resize: none;
 }
 .submit-button {
-    padding: 12px 10px;
+    padding: 0.75rem 0.625rem;
     border: none;
     border-radius: 8px;
     background-color: #c7c7c7;
@@ -250,8 +261,8 @@ textarea {
     outline: none;
 }
 .floating-button {
-    width: 32px;
-    height: 32px;
+    width: 2rem;
+    height: 2rem;
     position: absolute;
     bottom: 0px;
     right: 0px;
@@ -264,22 +275,69 @@ textarea {
 }
 footer {
     width: 100dvw;
+    padding: 1.5rem 1.25rem;
     background-color: rgba(242, 242, 242, 1);
-    padding-left: 10dvw;
-    padding-right: 10dvw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer_container {
+    width: 73rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 .footer-1 {
-    font-size: 20px;
+    font-size: 1.25rem;
     font-family: "bold", sans-serif;
 }
 .footer-2 {
-    font-size: 14px;
+    font-size: 1rem;
     color: rgba(95, 95, 95, 1);
 }
 .footer-3 {
-    font-size: 14px;
+    font-size: 1rem;
     color: rgba(145, 145, 145, 1);
+}
+@media (max-width: 375px) {
+    * {
+        padding: 4px;
+    }
+    main {
+        width: 100%;
+        align-items: none;
+    }
+    .header-text-container {
+        width: 100%;
+    }
+    .header-img {
+        width: 100%;
+    }
+    .article-header {
+        width: 100%;
+    }
+    .article-main {
+        width: 100%;
+        flex-direction: column;
+        height: 0;
+    }
+
+    .daily {
+        order: 1;
+        width: 100%;
+        height: 40rem;
+    }
+    .post {
+        order: 2;
+    }
+    .floating-button {
+        display: none;
+    }
+    .post-container {
+        height: 24rem;
+        font-size: 0.75rem;
+    }
+    footer {
+        display: none;
+    }
 }
