--- a/style/dailyDetailInforStyle.css
+++ b/style/dailyDetailInforStyle.css
@@ -32,13 +32,11 @@ body {
     width: 100dvw;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 24px;
-    padding-left: 10dvw;
-    padding-right: 10dvw;
 }
 main {
-    width: 100%;
+    width: 73rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -62,10 +60,19 @@ header {
 .header-text {
     font-family: "semibold", sans-serif;
 }
+.header-mobile {
+    display: flex;
+    font-family: "bold", sans-serif;
+    align-items: center;
+    font-size: 1.3rem;
+}
 article {
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+.mobile-text {
+    font-family: "bold", sans-serif;
 }
 .article-header {
     padding-bottom: 12px;
@@ -133,7 +140,7 @@ article {
     cursor: pointer;
 }
 section {
-    width: 100%;
+    width: 73rem;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -150,7 +157,7 @@ section {
     justify-content: space-between;
 }
 .section-input1 {
-    width: 95%;
+    width: 80%;
     padding: 12px 16px;
     border-radius: 8px;
     outline: none;
@@ -176,4 +183,27 @@ section {
     display: flex;
     flex-direction: column;
     gap: 12px;
+}
+@media (min-width: 380px) {
+    .header-text-container {
+        display: flex;
+    }
+    .header-mobile {
+        display: none;
+    }
+}
+@media (max-width: 375px) {
+    * {
+        padding: 4px;
+    }
+    main,
+    section {
+        width: 100%;
+    }
+    .header-text-container {
+        display: none;
+    }
+    .header-mobile {
+        display: flex;
+    }
 }
