--- a/04-01-diary/css/edit.css
+++ b/04-01-diary/css/edit.css
@@ -27,98 +27,119 @@ body {
     color: #000000;
 }
 
-.diary_layout {
+.edit_diary {
     display: flex;
     flex-direction: column;
     gap: 24px;
     width: 100%;
 }
 
-.diary_title {
+.select_mood {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 24px;
 }
 
-#title_details {
-    font-size: 22px;
-    font-weight: 700;
-    padding-bottom: 12px;
-    border-bottom: 2px solid #000000;
-}
-
-.diary_info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.diary_feeling {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-#mood_image {
-    width: 32px;
-    height: 32px;
-}
-
-#show_mood {
+.select_mood_title {
     font-size: 20px;
     font-weight: 600;
-    line-height: 24px;
 }
 
-.date {
+.radio_group {
     display: flex;
-    font-size: 14px;
+    flex-direction: row;
+    gap: 20px;
+    width: 100%;
+    height: 24px;
+}
+
+.radio_button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    font-size: 18px;
     font-weight: 400;
-    color: #919191;
+}
+
+.edit_part {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    color: #333333;
+}
+
+.editing {
+    display: flex;
+    flex-direction: column;
     gap: 8px;
 }
 
-#show_date {
-    color: #919191;
+.input_label {
     font-size: 14px;
     font-weight: 400;
+    color: #333333;
 }
 
-.diary_content {
+#edit_title {
     display: flex;
-    flex-direction: column;
-    font-size: 16px;
-    font-weight: 600;
-    gap: 13px;
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    border: 1px solid #D4D3D3;
+    padding: 12px 16px;
+    gap: 10px;
 }
 
-.show_content {
-    font-size: 16px;
-    font-weight: 500;
+#edit_content {
+    display: flex;
+    width: 100%;
+    height: 128px;
+    border-radius: 8px;
+    border: 1px solid #D4D3D3;
+    padding: 12px 16px;
+    gap: 10px;
 }
 
 .edit_button {
     display: flex;
-    justify-content: end;
-    border-bottom: 1px solid #000000;
-    padding-bottom: 16px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 48px;
     gap: 16px;
 }
 
-.edit {
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
-    font-size: 18px;
+.cancle {
+    width: 104px;
+    height: 48px;
     background-color: #ffffff;
-    border: 1px solid #D4D3D3;
-    border-radius: 8px;
     color: #1C1C1C;
-    cursor: pointer;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    border: 1px solid #000000;
+    border-radius: 8px;
+    gap: 10px;
+    padding: 8px 10px;
+}
+
+.edit {
+    width: 104px;
+    height: 48px;
+    background-color: #000000;
+    color: #F2F2F2;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    gap: 10px;
+    padding: 8px 10px;
 }
 
 .edit:hover {
-    background-color: #e0e0e0;
+    transform: skew(-6deg, 0deg)
 }
 
 .recollect {
@@ -147,7 +168,8 @@ body {
     display: flex;
     width: 1400px;
     height: 48px;
-    border: 1px solid #D4D3D3;
+    background-color: #F2F2F2;
+    border: none;
     border-radius: 8px;
     padding: 12px 16px;
     gap: 10px;
@@ -166,10 +188,11 @@ body {
     text-align: center;
     width: 51px;
     height: 48px;
-    background-color: #000000;
+    background-color: #C7C7C7;
     font-size: 18px;
     font-weight: 600;
-    color: #ffffff;
+    color: #F2F2F2;
+    border: none;
     border-radius: 8px;
     gap: 10px;
 }
