--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -3,10 +3,8 @@
   margin: 0;
   padding: 0;
   max-width: 100%;
-  /* width: 100%; */
 }
 .layout {
-  /* position: relative; */
   display: flex;
   width: 120rem;
   justify-content: center;
@@ -220,7 +218,7 @@ ul li {
   height: 3rem;
   border-radius: 0.5rem;
   background: var(--Gray-B, #000);
-  color: var(--Gray-W, #FFF);
+  color: var(--Gray-W, #fff);
   font-size: 1.125rem;
   font-style: normal;
   font-weight: 600;
@@ -272,7 +270,6 @@ ul li {
 .diary_cover {
   width: 100%;
   display: flex;
-  /* height: 17.813rem; */
   align-items: center;
   gap: 0.625rem;
   align-self: stretch;
@@ -349,11 +346,11 @@ ul li {
 #aside_layout {
   display: none;
   position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-  background: rgba(0, 0, 0, 0.50);
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 200;
   align-items: center;
   justify-content: center;
@@ -487,7 +484,6 @@ ul li {
   align-self: stretch;
 }
 .diary_contents {
-
   height: 1.25rem;
   color: var(--Gray-Gray-800, #333);
   font-size: 0.875rem;
@@ -541,8 +537,8 @@ ul li {
 }
 .close_button {
   border: 0.063rem solid var(--Gray-B, #000);
-  color: var(--Gray-Gray-900, #1C1C1C);
-  background: var(--Gray-W, #FFF);
+  color: var(--Gray-Gray-900, #1c1c1c);
+  background: var(--Gray-W, #fff);
 }
 .register_button {
   color: var(--Gray-Gray-50, #f2f2f2);
@@ -630,10 +626,10 @@ ul li {
     order: 2;
   }
   .topScroll > img {
-  width: 3.125rem;
-  position: absolute;
-  left: 9.375rem;
-  bottom: 0.313rem;
+    width: 3.125rem;
+    position: absolute;
+    left: 9.375rem;
+    bottom: 0.313rem;
   }
   .mood_checkbox_group {
     display: flex;
@@ -656,4 +652,108 @@ ul li {
     background-image: url("./image/mobile_banner.png");
     background-repeat: no-repeat;
   }
+}
+.confirm_modal_layout {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 900;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+.confirm_modal {
+  display: flex;
+  width: 30rem;
+  min-width: 30rem;
+  max-width: 47.5rem;
+  padding: 1.5rem;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+  border-radius: 1.5rem;
+  background: #fff;
+  color: #000;
+  text-align: center;
+}
+.modal_title {
+  color: #000;
+  text-align: center;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: -0.015rem;
+}
+.modal_content {
+  color: var(--Gray-Gray-800, #333);
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+  letter-spacing: -0.013rem;
+}
+.modal_button_group {
+  display: flex;
+  gap: 1.313rem;
+}
+.continue_writing_btn {
+  display: flex;
+  width: 6.5rem;
+  height: 3rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  border-radius: 0.5rem;
+  border: 0.063rem solid var(--Gray-B, #000);
+  background: var(--Gray-W, #fff);
+  color: var(--Gray-Gray-900, #1c1c1c);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
+}
+.cancel_registration_btn {
+  display: flex;
+  width: 6.5rem;
+  height: 3rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  border-radius: 0.5rem;
+  background: var(--Gray-B, #000);
+  color: var(--Gray-Gray-50, #f2f2f2);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
+}
+#diary_registration_modal > div > button {
+  display: flex;
+  height: 3rem;
+  padding: 0.5rem 0.625rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.625rem;
+  flex: 1 0 0;
+  border-radius: 0.5rem;
+  background: var(--Gray-B, #000);
+  color: var(--Gray-W, #fff);
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: -0.011rem;
+  width: 100%;
 }
